# Quantized_Decoder_Polar_Codes

./: GenerateLLRLUT.py  GenerateLLRLookUpTable_MMI.py  GenerateLLRLookUpTable_MinDistort+KMeans.py  GenerateLLRMILUT.py  GenerateLUT.py  GenerateLUTSingleSNR.py  GenerateLUT_DegradMerge.py  GenerateLUT_UpgradMerge.py  GenerateLUTsIB.py  GenerateLookUpTableMMI.py  GenerateLookUpTable_DegradMerge.py  GenerateLookUpTable_LLRDomain.py  GenerateLookUpTable_ProbabilityDomain.py  README.md  capacity_loss.py  decoding_latency.py  disp_internal_LLR.py  eqivalent_capacity.py  mainFPDecoder.py  mainQuantizedDecoder_ContinuousDomain.py  mainQuantizedDecoder_LLRDomain.py  mainQuantizedDecoder_ProbabilityDomain.py  main_CAFastSCLLUT.py  main_CASCL.py  main_CASCLLLRLUT.py  main_CASCLLUT.py  main_FastSC.py  main_FastSCL.py  main_FastSCLLUT.py  main_FastSCLUT.py  main_SC.py  main_SCL.py  main_SCLLLRLUT.py  main_SCLLRLUT.py  main_SCLLRMILUT.py  main_SCLLUT.py  main_SCLLUT_DegradMerge.py  main_SCLLUT_DesignSNR.py  main_SCLLloyd.py  main_SCLUT.py  (+11 more)
PolarEncoder/: CMakeLists.txt  README.md  build.sh  setup.py
PolarEncoder/PolarBD/: __init__.py
PolarEncoder/PolarBD/PolarBD/: CASCLWithRNTI.py  DMetricCalculator.py  __init__.py
PolarEncoder/PolarBD/_cpp/: _libPolarBD.cpp  ndarray_converter.h
PolarEncoder/PolarBD/_cpp/include/: CASCLWithRNTI.h  DMetric.h  utils.h
PolarEncoder/PolarBD/_cpp/py_interface/: py_CASCLWithRNTI.cpp  py_DMetric.cpp
PolarEncoder/PolarBD/_cpp/src/: CASCLWithRNTI.cpp  DMetric.cpp  utils.cpp
PolarEncoder/pybind11/: CMakeLists.txt
Quantizers/: CMakeLists.txt  README.md  build.sh  setup.py
Quantizers/quantizers/: __init__.py
Quantizers/quantizers/_cpp/: libQuantizer.cpp  ndarray_converter.cpp
Quantizers/quantizers/_cpp/IBQuantizers/: IBQuantizers.cpp  IBQuantizers.h
Quantizers/quantizers/_cpp/LLRMIQuantizer/: LLRMIQuantizer.cpp  LLRMIQuantizer.h
Quantizers/quantizers/_cpp/LLRQuantizer/: LLRQuantizer.cpp  LLRQuantizer.h
Quantizers/quantizers/quantizer/: LLRMIQuantizer.py  LLROptLSQuantizer.py  MMIQuantizer.py  ModifiedsIBQuantizer.py  __init__.py
(+126 files in other folders)
